<resources>
    <string name="app_name">Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="erase_sign">C</string>
    <string name="equal_sign">=</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="division_sign">/</string>
    <string name="multiplication_sign">*</string>
    <string name="sqrt_sign">√</string>
    <string name="cbrt_sign">∛</string>
    <string name="delete_sign"><![CDATA[<—]]></string>
    <string name="close_bracket">)</string>
    <string name="open_bracket">(</string>
    <string name="cosine">cos</string>
    <string name="sine">sin</string>
    <string name="tangent">tan</string>
    <string name="pi">𝛑</string>
    <string name="e">e</string>
    <string name="ln">ln</string>
    <string name="log2">log2</string>
    <string name="log10">log10</string>
    <string name="switch_preference_key">Theme</string>
    <string name="switch_preference_title">Dark Theme</string>
</resources>